[package]
name = "jarvis-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "J.A.R.V.I.S."
repository = "https://github.com/jiannei/jarvis-cli"
homepage = "https://github.com/jiannei/jarvis-cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "3"
chrono = "0.4"
dialoguer = "0.12"
shellexpand = "3"
